# GPA_Mega

./: .gitignore  README.md
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: Primary.language.settings.xml  Secondary.1739354073927.pdom  Secondary.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/.projects/Primary/: .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/Primary/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/Secondary/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 9.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Primary/: .cproject  .mxproject  .project.bak  CMakeCache.txt  CMakeLists.txt  Primary.ioc  STM32H723VGTX_FLASH.ld  build.ninja  cmake_install.cmake  compile_commands.json
Primary/Core/Inc/: FreeRTOSConfig.h  cli_app.h  dma.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
Primary/Core/Src/: FreeRTOS_CLI.c  adc.c  cli_app.c  dma.c  dts.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32h7xx_it.c  tim.c
Primary/Drivers/CMSIS/DSP_DRIVERS/Include/: armMathAddon.h
Primary/Drivers/CMSIS/DSP_DRIVERS/Lib/: armMathAddon.c
Primary/Drivers/Components/BARO/: bmp390.c  bmp390.h
Primary/Drivers/Components/GPS/: SAM-M8Q.c  SAM-M8Q.h  u_error_common.h  u_ubx_protocol.c  u_ubx_protocol.h
Primary/Drivers/Components/IMU1/: LSM6DSR.c  LSM6DSR.h
Primary/Drivers/Components/IMU2/: ISM330DHCX.c  ISM330DHCX.h
Primary/Drivers/Components/IMUS/: IMUS.c  IMUS.h
Primary/Drivers/Components/LED/: ws2812.c  ws2812.h
Primary/Drivers/Components/MAG/: LIS3MDL.c  LIS3MDL.h
Primary/Drivers/Components/NRF/: NRF24L01P.c  NRF24L01P.h
Primary/Drivers/Components/PYRO/: Pyro.c  Pyro.h
Primary/Drivers/Components/Servo/: SERVO.c  SERVO.h  SERVO_cfg.c  SERVO_cfg.h
Primary/Drivers/Components/Stepper/: Stepper.c  Stepper.h
Primary/Drivers/Components/XBee/: xBee.c  xBee.h
Primary/Drivers/Libraries/: InterBoardCom.c  InterBoardCom.h  Packets.h  calibration_data.c  calibration_data.h  control.c  control.h  guidance.c  guidance.h  navigation.c  navigation.h  packets.c  packets.h  ptot.c  ptot.h  radio.h  signalPlotter.c  signalPlotter.h  spark.c  spark.h  statemachine.c  statemachine.h  status.c  status.h
Primary/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
Primary/cmake/: gcc-arm-none-eabi.cmake
Primary/cmake/stm32cubemx/: CMakeLists.txt  Makefile  cmake_install.cmake
Secondary/: .cproject.bak  .mxproject  .project.bak  CMakeCache.txt  CMakeLists.txt  Secondary.ioc  build.ninja  cmake_install.cmake  compile_commands.json  startup_stm32f405xx.s
Secondary/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h
Secondary/Core/Src/: freertos.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Secondary/Drivers/Components/Buzzer/: Buzzer.c  Buzzer.h
Secondary/Drivers/Components/FLASH/: W25Q1.c  W25Q1.h
Secondary/Drivers/Components/LED/: ws2812.c  ws2812.h
Secondary/Drivers/Components/SD/: SD.c  SD.h
Secondary/Drivers/Components/VoltageReader/: VR.c  VR.h
Secondary/Drivers/Components/XBee/: xBee.c  xBee.h
Secondary/Drivers/Libraries/: InterBoardCom.c  InterBoardCom.h  NRF24L01P.c  NRF24L01P.h  Packets.h  PowerUnit.c  PowerUnit.h  VoltageReader.c  VoltageReader.h  packets.c  packets.h  radio.c  radio.h  statemachine.c  statemachine.h  status.c  status.h
Secondary/cmake/: gcc-arm-none-eabi.cmake
Secondary/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
